@@ -14,7 +14,7 @@
     <dependency org="net.sf.ehcache" name="ehcache" rev="1.2.4" />
 
     <dependency org="org.hibernate" name="hibernate-core" rev="${lib.hibernate.rev}"/>
-    <dependency org="org.hibernate" name="hibernate-annotations" rev="${lib.hibernate-annotations.rev}"/>
+    <dependency org="org.hibernate" name="hibernate-validator" rev="${lib.hibernate-validator.rev}" conf="compile->default"/>
     <dependency org="javax.persistence" name="persistence-api" rev="1.0" />
 
     <dependency org="org.springframework" name="spring-beans" rev="${lib.spring.rev}"/>
@@ -45,5 +45,6 @@
     <exclude org="com.oracle.toplink"/>
     <exclude org="log4j"/>
     <exclude org="org.eclipse.persistence"/>
+    <exclude org="org.jboss.javaee"/>
   </dependencies>
 </ivy-module>
